--- a/style.css
+++ b/style.css
@@ -51,3 +51,63 @@
     font-weight: bolder;
 }
 
+section{
+    padding-bottom: 35px;
+}
+
+.my-mission{
+    font-family: 'Mulish', sans-serif;
+    text-align: center;
+    font-size: 50px;
+}
+
+.color-blue{
+    color: rgb(17, 17, 78);
+}
+
+.missions{
+    width: 26%;
+    margin-left: 10%;
+    background-color: rgb(199, 219, 228);
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.visions{
+    width: 26%;
+    margin-left: 1%;
+    background-color: rgb(235, 205, 210);
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.goals{
+    width: 26%;
+    margin-left: 1%;
+    margin-right: 10%;
+    background-color: rgb(236, 234, 199);
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.missions img{
+    width: 40%;
+}
+
+.visions img{
+    width: 40%;
+}
+
+.goals img{
+    width: 40%;
+}
+
+.paraghaphs{
+    font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+    text-align: justify;
+}
+
+h2{
+    font-family: 'Mulish', sans-serif;
+}
