--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ section{
 .missions{
     width: 26%;
     margin-left: 10%;
-    background-color: rgb(199, 219, 228);
+    background-color: rgb(229, 243, 248);
     border-radius: 10px;
     padding: 20px;
 }
@@ -82,7 +82,7 @@ section{
 .visions{
     width: 26%;
     margin-left: 1%;
-    background-color: rgb(235, 205, 210);
+    background-color: rgb(250, 240, 242);
     border-radius: 10px;
     padding: 20px;
 }
@@ -91,7 +91,7 @@ section{
     width: 26%;
     margin-left: 1%;
     margin-right: 10%;
-    background-color: rgb(236, 234, 199);
+    background-color: rgb(248, 248, 238);
     border-radius: 10px;
     padding: 20px;
 }
@@ -184,7 +184,7 @@ h2{
 
 .margin7{
     margin-right: 10%;
-    margin-bottom: 10%;
+    margin-bottom: 4%;
 }
 
 .community-area{
@@ -194,4 +194,48 @@ h2{
     background-size: 12%;
     background-position-y: 300px;
     background-position-x: 1170px;
+}
+
+.margin8{
+    margin-right: 45%;
+}
+
+.margin9{
+    margin-top: 6%;
+}
+
+.half-width2{
+    width: 50%;
+}
+
+.half-width2 img{
+    width: 45%;
+    margin-left: 18%;
+}
+
+.app-area1{
+    background-image: url(images/shapes/shape-3.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: 10%;
+    background-position-y: 65px;
+    background-position-x: 220px;
+}
+
+.app-area2{
+    background-image: url(images/shapes/shape-3.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: 10%;
+    background-position-y: 435px;
+    background-position-x: 110px;
+}
+
+.app-area3{
+    background-image: url(images/shapes/shape-3.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: 5%;
+    background-position-y: 335px;
+    background-position-x: 470px;
 }
